Изменены параметры соединения с Шиной RFID на демонстрационные.

--- a/csharp/PrintSgtinTags/App.config
+++ b/csharp/PrintSgtinTags/App.config
@@ -11,16 +11,16 @@
     <userSettings>
         <PrintSgtinTags.Properties.Settings>
             <setting name="BusHost" serializeAs="String">
-                <value>127.0.0.1</value>
+                <value>demo.rfidbus.rfidcenter.ru</value>
             </setting>
             <setting name="BusPort" serializeAs="String">
-                <value>8080</value>
+                <value>80</value>
             </setting>
             <setting name="BusLogin" serializeAs="String">
-                <value>admin</value>
+                <value>demo</value>
             </setting>
             <setting name="BusPassword" serializeAs="String">
-                <value>admin</value>
+                <value>demo</value>
             </setting>
             <setting name="CompanyPrefix" serializeAs="String">
                 <value>461000232</value>
