--- a/csharp/Readers.ObserveTags/App.config
+++ b/csharp/Readers.ObserveTags/App.config
@@ -3,4 +3,13 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="RfidCenter.Basic" publicKeyToken="c77c3fea3fdc4436" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.4.0.7" newVersion="2.4.0.7" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
 </configuration>
